# atmosensor

./: .dockerignore  Cargo.toml  README.md  memory.x
atmosensor-esp32/: Cargo.toml
atmosensor-esp32/src/: lib.rs  main.rs  scd30.rs
atmosensor-fw/: Cargo.toml  README.md  container-build.sh  install-flash-tools.sh
atmosensor-fw/.cargo/: config.toml
atmosensor-fw/src/: main.rs  static_resources.rs
atmosensor-fw/src/cmd_handlers/: led.rs  mod.rs  sensor.rs
atmosensor-fw/src/drivers/: mod.rs
atmosensor-fw/src/scd30/: mod.rs
atmosensor-fw/src/tasks/: cmd_queue.rs  cmd_receiver.rs  commands.rs  mod.rs  usb_handler.rs
atmosensor-fw/src/utils/: cobs_buffer.rs  mod.rs  spsc_queue.rs
atmosensor-host-apps/: Cargo.toml  regenerate-protocol-mod.sh
atmosensor-host-apps/assets/: message_struct.rs.j2  module.rs.j2
atmosensor-host-apps/atmosensor-client/: Cargo.toml
atmosensor-host-apps/atmosensor-client/src/: lib.rs
atmosensor-host-apps/atmosensor-client/src/protocol/: autogen.rs  mod.rs
atmosensor-host-apps/atmosensor-tools/: Cargo.toml  regenerate-protocol-mod.sh
atmosensor-host-apps/atmosensor-tools/assets/: message_struct.rs.j2  module.rs.j2
atmosensor-host-apps/atmosensor-tools/src/: lib.rs
atmosensor-host-apps/atmosensord/: Cargo.toml
atmosensor-host-apps/atmosensord/src/: config.rs  lib.rs
atmosensor-host-apps/config/: atmosensor.yaml
atmosensor-host-apps/src/: lib.rs  protocol.rs
atmosensor-kicad/: .gitignore  atmosensor-kicad.ioc
docker/atmosensord/: 50-atmosensor-usb.rules  Dockerfile  run-atmosensord.sh
docker/fw-cross-compile/: Dockerfile
src/: main.rs
usb-protocol/: protocol.json5
