[package]
name = "atmosensor-stm32"
version = "0.1.0"
edition = "2021"


[dependencies]
bare-metal = "1.0.0"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
embedded-hal = "0.2.7"
nb = "1"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
stm32f1xx-hal = { version = "0.9", features = ["rt", "stm32f103", "medium"] }
usb-device = "0.2.8"
usbd-serial = "0.1.1"
unwrap-infallible = "0.1.5"

[features]
default = ["bluepill"]
bluepill = []
atmosensor = []

[profile.release]
codegen-units = 1
debug = true
panic = "abort"
lto = true

[profile.dev]
panic = "abort"