[package]
name = "atmosensor-stm32"
version = "0.1.0"
edition = "2021"

[dependencies]
bare-metal = "1.0.0"
cobs = { version = "0.2", default-features = false }
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
crc_all = "0.2.0"
embedded-hal = { features = ["unproven"], version = "0.2.7" }
heapless = "0.7.4"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
stm32f1 = { version = "0.14.0", features = ["rt", "stm32f103"] }
stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal", rev = "21c64d8", features = ["rt", "stm32f103", "medium"] }
usb-device = "0.2.8"
usbd-serial = "0.1.1"

[features]
default = ["bluepill"]
bluepill = []
atmosensor = []

[profile.release]
codegen-units = 1
debug = true
panic = "abort"
lto = true

[profile.dev]
panic = "abort"