[package]
name = "atmosensor-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "atmosensor_client"
path = "src/lib.rs"

[dependencies]
byteorder = "1.4"
cobs = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.21", features = ["full"] }
tokio-serial = "5.4"
