[package]
name = "atmosensor"
version = "0.1.0"
edition = "2021"

[lib]
name = "atmosensor"
path = "src/lib.rs"

[[bin]]
name = "atmosensord"
path = "src/bin/atmosensord.rs"

[dependencies]
byteorder = "1.4"
clap = { version = "4.2", features = ["derive"] }
cobs = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.21", features = ["full"] }
tokio-serial = "5.4"
