[package]
name = "atmosensord"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "atmosensord"
path = "src/bin/atmosensord.rs"

[dependencies]
atmosensor-client = { path = "../atmosensor-client" }
chrono = "0.4"
ctrlc = "3.2"
env_logger = "0.10"
futures = "0.3"
influxdb2 = "0.3"
influxdb2-derive = "0.1"
influxdb2-structmap = "0.2"
log = "0.4"
tokio = { version = "1.21", features = ["full"] }
