[package]
name = "atmosensord"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "atmosensord"
path = "src/bin/atmosensord.rs"

[dependencies]
atmosensor-client = { path = "../atmosensor-client" }
chrono = "0.4"
config = "0.13"
ctrlc = "3.2"
env_logger = "0.10"
futures = "0.3"
influxdb2 = "0.3"
influxdb2-derive = "0.1"
influxdb2-structmap = "0.2"
log = "0.4"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.2"
tokio = { version = "1.21", features = ["full"] }
